tests/baselines/reference/computedPropertyNamesOnOverloads_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNamesOnOverloads_ES5.ts(4,5): error TS1168: A computed property name in a method overload must directly refer to a built-in symbol.
tests/cases/conformance/es6/computedProperties/computedPropertyNamesOnOverloads_ES5.ts(5,5): error TS1168: A computed property name in a method overload must directly refer to a built-in symbol.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNamesOnOverloads_ES5.ts (2 errors) ====
    var methodName = "method";
    var accessorName = "accessor";
    class C {
        [methodName](v: string);
        ~~~~~~~~~~~~
!!! error TS1168: A computed property name in a method overload must directly refer to a built-in symbol.
        [methodName]();
        ~~~~~~~~~~~~
!!! error TS1168: A computed property name in a method overload must directly refer to a built-in symbol.
        [methodName](v?: string) { }
    }